updated classification v2 based ton Shruti's reduction in Outsip column

--- a/Jupyter Scripts/Car Rental Classification.ipynb
+++ b/Jupyter Scripts/Car Rental Classification.ipynb
@@ -1966,63 +1966,24 @@
     "for x, y in zip(X_train.columns.tolist(), default.feature_importances_):\n",
     "    print(x,round(y,2))\n",
     "print()\n",
-    "print(\"AUC\", roc_auc_score(y_test, default.predict_proba(X_test)[:,1]))"
+    "# print(\"AUC\", roc_auc_score(y_test, default.predict_proba(X_test)[:,1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 240 candidates, totalling 1200 fits\n"
+     "ename": "NameError",
+     "evalue": "name 'RandomForestClassifier' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-7a7bf6f256d7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'timeit'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mrfc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# Setting grid parameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mn_estimators\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m500\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m800\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmax_depth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'RandomForestClassifier' is not defined"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:   50.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed:  2.7min\n",
-      "[Parallel(n_jobs=-1)]: Done 434 tasks      | elapsed:  4.7min\n",
-      "[Parallel(n_jobs=-1)]: Done 784 tasks      | elapsed:  9.8min\n",
-      "[Parallel(n_jobs=-1)]: Done 1200 out of 1200 | elapsed: 14.1min finished\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, error_score=nan,\n",
-       "             estimator=RandomForestClassifier(bootstrap=True, ccp_alpha=0.0,\n",
-       "                                              class_weight=None,\n",
-       "                                              criterion='gini', max_depth=None,\n",
-       "                                              max_features='auto',\n",
-       "                                              max_leaf_nodes=None,\n",
-       "                                              max_samples=None,\n",
-       "                                              min_impurity_decrease=0.0,\n",
-       "                                              min_impurity_split=None,\n",
-       "                                              min_samples_leaf=1,\n",
-       "                                              min_samples_split=2,\n",
-       "                                              min_weight_fraction_leaf=0.0,\n",
-       "                                              n_estimators=100, n_jobs=None,\n",
-       "                                              oob_score=False, random_state=1,\n",
-       "                                              verbose=0, warm_start=False),\n",
-       "             iid='deprecated', n_jobs=-1,\n",
-       "             param_grid={'criterion': ['gini', 'entropy'],\n",
-       "                         'max_depth': [None, 4, 5, 6, 7, 8, 9, 10],\n",
-       "                         'max_features': ['auto', 'sqrt', 'log2'],\n",
-       "                         'n_estimators': [100, 200, 300, 500, 800]},\n",
-       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
-       "             scoring=None, verbose=1)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2038,6 +1999,7 @@
     "\n",
     "\n",
     "parameters = dict(n_estimators = n_estimators, max_depth = max_depth,\n",
+    "#                   min_samples_split = min_samples_split, min_samples_leaf = min_samples_leaf,\n",
     "                  criterion = criterion, max_features = max_features)\n",
     "\n",
     "gridF = GridSearchCV(estimator = rfc, param_grid = parameters, cv = 5, verbose = 1,\n",
@@ -2151,7 +2113,7 @@
     }
    ],
    "source": [
-    "print(\"AUC\", roc_auc_score(y_test, best_model.predict_proba(X_test)[:,1]))"
+    "# print(\"AUC\", roc_auc_score(y_test, best_model.predict_proba(X_test)[:,1]))"
    ]
   },
   {
@@ -2250,8 +2212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classification_data = classification_data.reset_index(drop=True)\n",
-    "classification_data.to_csv(\"classification_data.csv\")"
+    "# classification_data = classification_data.reset_index(drop=True)\n",
+    "# classification_data.to_csv(\"classification_data.csv\")"
    ]
   }
  ],
