added code for Classification using gradient boosting classifier

--- a/Jupyter Scripts/backup/Car Rental Classification_v2.ipynb
+++ b/Jupyter Scripts/backup/Car Rental Classification_v2.ipynb
@@ -18,8 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classification_data = pd.read_csv(\"../Data/classification_data.csv\")\n",
-    "airline_features = pd.read_csv(\"../Data/new_airfare_features.csv\")"
+    "classification_data = pd.read_csv(\"../../Data/classification_data.csv\")\n",
+    "airline_features = pd.read_csv(\"../../Data/new_airfare_features.csv\")"
    ]
   },
   {
@@ -1450,41 +1450,6 @@
    "source": [
     "print(\"Balanced Accuracy for default Random Forest on CV data: \",balanced_accuracy_score(y_test,clf_predict))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %timeit\n",
-    "# clf2 = SVC(gamma='auto', kernel = \"linear\")\n",
-    "# clf2.fit(X_train,y_train)\n",
-    "# clf_predict2 = clf2.predict(X_test)\n",
-    "# print(\"Accuracy for best default SVM on CV data: \",accuracy_score(y_test,clf_predict2))\n",
-    "# print(\"Balanced Accuracy for default Random Forest on CV data: \",balanced_accuracy_score(y_test,clf_predict2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %timeit\n",
-    "# clf3 = SVC(gamma='auto', kernel = \"poly\")\n",
-    "# clf3.fit(np.asarray(X_train),np.asarray(y_train))\n",
-    "# clf_predict3 = clf3.predict(np.asarray(X_test))\n",
-    "# print(\"Accuracy for best default SVM on CV data: \",accuracy_score(np.asarray(y_test),clf_predict3))\n",
-    "# print(\"Balanced Accuracy for default Random Forest on CV data: \",balanced_accuracy_score(np.asarray(y_test),clf_predict3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
