--- a/Jupyter Scripts/backup/Car Rental Classification_v2.ipynb
+++ b/Jupyter Scripts/backup/Car Rental Classification_v2.ipynb
@@ -74,7 +74,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>-1.220856</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -90,7 +90,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>-1.472890</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -106,7 +106,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>-1.481469</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -122,7 +122,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>0.012021</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -138,7 +138,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>-1.357856</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -227,7 +227,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>2018-02-01</td>\n",
        "      <td>0.104127</td>\n",
        "      <td>0.000000</td>\n",
@@ -238,7 +238,7 @@
        "      <td>Decrease</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>2018-02-02</td>\n",
        "      <td>0.077575</td>\n",
        "      <td>0.000000</td>\n",
@@ -249,7 +249,7 @@
        "      <td>Decrease</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>2018-02-03</td>\n",
        "      <td>0.174479</td>\n",
        "      <td>0.000000</td>\n",
@@ -260,7 +260,7 @@
        "      <td>Decrease</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>2018-02-04</td>\n",
        "      <td>0.229135</td>\n",
        "      <td>-0.014099</td>\n",
@@ -271,7 +271,7 @@
        "      <td>Decrease</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>2018-02-05</td>\n",
        "      <td>0.187648</td>\n",
        "      <td>0.345462</td>\n",
@@ -331,14 +331,16 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 920 entries, 0 to 919\n",
       "Data columns (total 8 columns):\n",
-      "DDATE             920 non-null datetime64[ns]\n",
-      "price_per_mile    920 non-null float64\n",
-      "total_fluc_50     920 non-null float64\n",
-      "total_fluc_70     920 non-null float64\n",
-      "total_fluc_120    920 non-null float64\n",
-      "avg_price         920 non-null float64\n",
-      "pct_change        920 non-null float64\n",
-      "trend             920 non-null object\n",
+      " #   Column          Non-Null Count  Dtype         \n",
+      "---  ------          --------------  -----         \n",
+      " 0   DDATE           920 non-null    datetime64[ns]\n",
+      " 1   price_per_mile  920 non-null    float64       \n",
+      " 2   total_fluc_50   920 non-null    float64       \n",
+      " 3   total_fluc_70   920 non-null    float64       \n",
+      " 4   total_fluc_120  920 non-null    float64       \n",
+      " 5   avg_price       920 non-null    float64       \n",
+      " 6   pct_change      920 non-null    float64       \n",
+      " 7   trend           920 non-null    object        \n",
       "dtypes: datetime64[ns](1), float64(6), object(1)\n",
       "memory usage: 57.6+ KB\n"
      ]
@@ -400,7 +402,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>0.104127</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -413,7 +415,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>0.077575</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -426,7 +428,7 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>0.174479</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -439,7 +441,7 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>0.229135</td>\n",
        "      <td>-0.014099</td>\n",
        "      <td>-0.014099</td>\n",
@@ -452,7 +454,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>0.187648</td>\n",
        "      <td>0.345462</td>\n",
        "      <td>0.345462</td>\n",
@@ -592,7 +594,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>26501</td>\n",
+       "      <th>26501</th>\n",
        "      <td>1.428936</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -618,7 +620,7 @@
        "      <td>29.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>26502</td>\n",
+       "      <th>26502</th>\n",
        "      <td>-0.507711</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -644,7 +646,7 @@
        "      <td>29.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>26503</td>\n",
+       "      <th>26503</th>\n",
        "      <td>-1.160674</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -670,7 +672,7 @@
        "      <td>29.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>26504</td>\n",
+       "      <th>26504</th>\n",
        "      <td>-0.756967</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -696,7 +698,7 @@
        "      <td>29.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>26505</td>\n",
+       "      <th>26505</th>\n",
        "      <td>-0.001643</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -784,29 +786,31 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 26506 entries, 0 to 26505\n",
       "Data columns (total 23 columns):\n",
-      "AVG_BEFORE_DAYS      26506 non-null float64\n",
-      "HOLIDAY              26506 non-null int64\n",
-      "HOLIDAY AFTER        26506 non-null int64\n",
-      "HOLIDAY BEFORE       26506 non-null int64\n",
-      "WEEKEND              26506 non-null int64\n",
-      "CHANGE               26506 non-null object\n",
-      "PICKUP_DATE_YEAR     26506 non-null int64\n",
-      "PICKUP_DATE_MONTH    26506 non-null int64\n",
-      "PICKUP_DATE_DATE     26506 non-null int64\n",
-      "OUTSIPP_economy      26506 non-null int64\n",
-      "OUTSIPP_luxury       26506 non-null int64\n",
-      "OUTSIPP_midrange     26506 non-null int64\n",
-      "OUTSIPP_premium      26506 non-null int64\n",
-      "price_per_mile       26469 non-null float64\n",
-      "total_fluc_50        26469 non-null float64\n",
-      "total_fluc_70        26469 non-null float64\n",
-      "total_fluc_120       26469 non-null float64\n",
-      "avg_price            26469 non-null float64\n",
-      "pct_change           26469 non-null float64\n",
-      "trend                26469 non-null object\n",
-      "DDATE_YEAR           26469 non-null float64\n",
-      "DDATE_MONTH          26469 non-null float64\n",
-      "DDATE_DATE           26469 non-null float64\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   AVG_BEFORE_DAYS    26506 non-null  float64\n",
+      " 1   HOLIDAY            26506 non-null  int64  \n",
+      " 2   HOLIDAY AFTER      26506 non-null  int64  \n",
+      " 3   HOLIDAY BEFORE     26506 non-null  int64  \n",
+      " 4   WEEKEND            26506 non-null  int64  \n",
+      " 5   CHANGE             26506 non-null  object \n",
+      " 6   PICKUP_DATE_YEAR   26506 non-null  int64  \n",
+      " 7   PICKUP_DATE_MONTH  26506 non-null  int64  \n",
+      " 8   PICKUP_DATE_DATE   26506 non-null  int64  \n",
+      " 9   OUTSIPP_economy    26506 non-null  int64  \n",
+      " 10  OUTSIPP_luxury     26506 non-null  int64  \n",
+      " 11  OUTSIPP_midrange   26506 non-null  int64  \n",
+      " 12  OUTSIPP_premium    26506 non-null  int64  \n",
+      " 13  price_per_mile     26469 non-null  float64\n",
+      " 14  total_fluc_50      26469 non-null  float64\n",
+      " 15  total_fluc_70      26469 non-null  float64\n",
+      " 16  total_fluc_120     26469 non-null  float64\n",
+      " 17  avg_price          26469 non-null  float64\n",
+      " 18  pct_change         26469 non-null  float64\n",
+      " 19  trend              26469 non-null  object \n",
+      " 20  DDATE_YEAR         26469 non-null  float64\n",
+      " 21  DDATE_MONTH        26469 non-null  float64\n",
+      " 22  DDATE_DATE         26469 non-null  float64\n",
       "dtypes: float64(10), int64(11), object(2)\n",
       "memory usage: 4.9+ MB\n"
      ]
@@ -936,7 +940,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>count</td>\n",
+       "      <th>count</th>\n",
        "      <td>26469.000000</td>\n",
        "      <td>26469.000000</td>\n",
        "      <td>26469.000000</td>\n",
@@ -955,7 +959,7 @@
        "      <td>26469.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>mean</td>\n",
+       "      <th>mean</th>\n",
        "      <td>0.000370</td>\n",
        "      <td>0.034455</td>\n",
        "      <td>0.034493</td>\n",
@@ -974,7 +978,7 @@
        "      <td>-0.005773</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>std</td>\n",
+       "      <th>std</th>\n",
        "      <td>0.999909</td>\n",
        "      <td>0.182399</td>\n",
        "      <td>0.182496</td>\n",
@@ -993,7 +997,7 @@
        "      <td>0.126421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>min</td>\n",
+       "      <th>min</th>\n",
        "      <td>-1.714830</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -1012,7 +1016,7 @@
        "      <td>-0.581659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>25%</td>\n",
+       "      <th>25%</th>\n",
        "      <td>-0.595773</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -1031,7 +1035,7 @@
        "      <td>-0.077703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>50%</td>\n",
+       "      <th>50%</th>\n",
        "      <td>-0.267472</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -1050,7 +1054,7 @@
        "      <td>0.003263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>75%</td>\n",
+       "      <th>75%</th>\n",
        "      <td>0.293513</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -1069,7 +1073,7 @@
        "      <td>0.075303</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>max</td>\n",
+       "      <th>max</th>\n",
        "      <td>10.922072</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -1148,7 +1152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ml_data.to_csv(\"../Data/final_merged_data.csv\" , index = False)"
+    "# ml_data.to_csv(\"../Data/final_merged_data.csv\" , index = False)"
    ]
   },
   {
@@ -1235,12 +1239,12 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, balanced_accuracy_score, make_scorer"
+    "from sklearn.metrics import accuracy_score, roc_auc_score, balanced_accuracy_score, make_scorer,classification_report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,14 +1257,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "                       max_depth=4, max_features='auto', max_leaf_nodes=None,\n",
+       "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+       "                       criterion='gini', max_depth=4, max_features='auto',\n",
+       "                       max_leaf_nodes=None, max_samples=None,\n",
        "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "                       min_samples_leaf=1, min_samples_split=2,\n",
        "                       min_weight_fraction_leaf=0.0, n_estimators=100,\n",
@@ -1268,7 +1273,7 @@
        "                       warm_start=False)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1355,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy for best Random Forest 0.5517594991364422\n",
+      "Test Accuracy for best Random Forest 0.5159299836292658\n",
+      "\n",
+      "Training Classification report\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "    Decrease       0.64      0.36      0.47      5689\n",
+      "    Increase       0.71      0.42      0.53      5682\n",
+      "   No change       0.48      0.81      0.60      7157\n",
+      "\n",
+      "    accuracy                           0.55     18528\n",
+      "   macro avg       0.61      0.53      0.53     18528\n",
+      "weighted avg       0.60      0.55      0.54     18528\n",
+      "\n",
+      "\n",
+      "Test Classification report\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "    Decrease       0.53      0.16      0.25      2509\n",
+      "    Increase       0.47      0.29      0.36      1925\n",
+      "   No change       0.52      0.90      0.66      3507\n",
+      "\n",
+      "    accuracy                           0.52      7941\n",
+      "   macro avg       0.51      0.45      0.42      7941\n",
+      "weighted avg       0.51      0.52      0.46      7941\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Training Accuracy for best Random Forest\",accuracy_score(y_train,best_model.predict(X_train)))\n",
+    "print(\"Test Accuracy for best Random Forest\",accuracy_score(y_test,pred))\n",
+    "print()\n",
+    "print(\"Training Classification report\\n\", classification_report(y_train,best_model.predict(X_train)))\n",
+    "print()\n",
+    "print(\"Test Classification report\\n\", classification_report(y_test, pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1449,6 +1501,53 @@
    ],
    "source": [
     "print(\"Balanced Accuracy for default Random Forest on CV data: \",balanced_accuracy_score(y_test,clf_predict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy for best SVM 0.6639140759930915\n",
+      "Test Accuracy for best SVM 0.4262687318977459\n",
+      "\n",
+      "Training Classification report\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "    Decrease       0.68      0.64      0.66      5689\n",
+      "    Increase       0.74      0.63      0.68      5682\n",
+      "   No change       0.61      0.71      0.66      7157\n",
+      "\n",
+      "    accuracy                           0.66     18528\n",
+      "   macro avg       0.68      0.66      0.67     18528\n",
+      "weighted avg       0.67      0.66      0.66     18528\n",
+      "\n",
+      "\n",
+      "Test Classification report\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "    Decrease       0.52      0.29      0.37      2509\n",
+      "    Increase       0.30      0.42      0.35      1925\n",
+      "   No change       0.48      0.53      0.50      3507\n",
+      "\n",
+      "    accuracy                           0.43      7941\n",
+      "   macro avg       0.43      0.41      0.41      7941\n",
+      "weighted avg       0.45      0.43      0.42      7941\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Training Accuracy for best SVM\",accuracy_score(y_train,clf.predict(X_train)))\n",
+    "print(\"Test Accuracy for best SVM\",accuracy_score(y_test,clf_predict))\n",
+    "print()\n",
+    "print(\"Training Classification report\\n\", classification_report(y_train,clf.predict(X_train)))\n",
+    "print()\n",
+    "print(\"Test Classification report\\n\", classification_report(y_test, clf_predict))"
    ]
   }
  ],
