restructuring the folder structure

--- a/Jupyter Scripts/Final/Car Rental Data Exploration.ipynb
+++ b/Jupyter Scripts/Final/Car Rental Data Exploration.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Car Data Explor\n",
-    "## Yuhan He\n",
-    "## 2020 Feb 27"
+    "# Car Rental Data Explore"
    ]
   },
   {
@@ -852,13 +850,6 @@
     "for x, y in zip(X_train.columns.tolist(), clf.coef_):\n",
     "    print(x,round(y,2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -877,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
