--- a/Jupyter Scripts/Final/Car Rental Regression Final.ipynb
+++ b/Jupyter Scripts/Final/Car Rental Regression Final.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Car Data Explore\n",
-    "## Yuhan He\n",
-    "## 2020 Feb 27"
+    "# Car Data Regression"
    ]
   },
   {
@@ -1323,20 +1321,6 @@
     "\n",
     "model.summary()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1355,7 +1339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
