--- a/Jupyter Scripts/Final/Air fare Regression Final.ipynb
+++ b/Jupyter Scripts/Final/Air fare Regression Final.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression task for the data sent earlier by ql2"
+    "# Final version of regression on Airfare"
    ]
   },
   {
@@ -2321,7 +2321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
